--- a/MessageExtension/Base.lproj/MainInterface.storyboard
+++ b/MessageExtension/Base.lproj/MainInterface.storyboard
@@ -54,12 +54,58 @@
                     <view key="view" contentMode="scaleToFill" id="rkq-Vv-FBG">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="508"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pWq-rX-ruZ">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="508"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="I9I-p4-h0H">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="StickerCell" id="SPh-I8-apT" customClass="StickerCell" customModule="MessageExtension" customModuleProvider="target">
+                                        <rect key="frame" x="10" y="10" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jdh-Ws-RIn" customClass="MSStickerView">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </view>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="jdh-Ws-RIn" secondAttribute="bottom" id="5eF-T7-dSM"/>
+                                            <constraint firstItem="jdh-Ws-RIn" firstAttribute="top" secondItem="SPh-I8-apT" secondAttribute="top" id="Gmv-oc-cqs"/>
+                                            <constraint firstAttribute="trailing" secondItem="jdh-Ws-RIn" secondAttribute="trailing" id="IX5-Vk-OSo"/>
+                                            <constraint firstItem="jdh-Ws-RIn" firstAttribute="leading" secondItem="SPh-I8-apT" secondAttribute="leading" id="X8L-7z-uKz"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="stickerView" destination="jdh-Ws-RIn" id="v4i-hC-vdd"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="pWq-rX-ruZ" secondAttribute="trailing" id="0xZ-wV-9eb"/>
+                            <constraint firstItem="pWq-rX-ruZ" firstAttribute="leading" secondItem="rkq-Vv-FBG" secondAttribute="leading" id="5Eh-OY-ekf"/>
+                            <constraint firstItem="pWq-rX-ruZ" firstAttribute="bottom" secondItem="3zq-oq-fpS" secondAttribute="top" id="Ajz-Hy-Wsb"/>
+                            <constraint firstItem="pWq-rX-ruZ" firstAttribute="top" secondItem="Rn6-TW-X6L" secondAttribute="bottom" id="yo2-dO-GdD"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="pWq-rX-ruZ" id="uCl-4D-INS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YdD-4C-CXR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="763" y="109"/>
+            <point key="canvasLocation" x="761.60000000000002" y="108.84557721139431"/>
         </scene>
     </scenes>
 </document>
