--- a/MessageExtension/Base.lproj/MainInterface.storyboard
+++ b/MessageExtension/Base.lproj/MainInterface.storyboard
@@ -90,13 +90,14 @@
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AddMoreCell" id="Iyb-XD-XMs">
                                         <rect key="frame" x="210" y="10" width="100" height="100"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AddMore" translatesAutoresizingMaskIntoConstraints="NO" id="wOq-hb-O24">
-                                                    <rect key="frame" x="20" y="20" width="60" height="60"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add_more_normal" highlightedImage="add_more_selected" translatesAutoresizingMaskIntoConstraints="NO" id="wOq-hb-O24">
+                                                    <rect key="frame" x="30" y="30" width="40" height="40"/>
+                                                    <color key="tintColor" red="0.37254901959999998" green="0.33333333329999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </imageView>
                                             </subviews>
                                         </view>
@@ -126,6 +127,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="AddMore" width="60" height="60"/>
+        <image name="add_more_normal" width="40" height="40"/>
+        <image name="add_more_selected" width="40" height="40"/>
     </resources>
 </document>
