--- a/MessageExtension/Base.lproj/MainInterface.storyboard
+++ b/MessageExtension/Base.lproj/MainInterface.storyboard
@@ -20,21 +20,7 @@
                     <view key="view" contentMode="scaleToFill" id="zMn-AG-sqS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="528"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Uk-bH-Q8P">
-                                <rect key="frame" x="0.0" y="20" width="320" height="508"/>
-                                <connections>
-                                    <segue destination="je6-JZ-ceA" kind="embed" id="TYb-KW-yKf"/>
-                                </connections>
-                            </containerView>
-                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="4Uk-bH-Q8P" firstAttribute="leading" secondItem="zMn-AG-sqS" secondAttribute="leading" id="AHi-RG-lSb"/>
-                            <constraint firstItem="4Uk-bH-Q8P" firstAttribute="top" secondItem="qkL-Od-lgU" secondAttribute="bottom" id="Awf-dg-nU9"/>
-                            <constraint firstAttribute="trailing" secondItem="4Uk-bH-Q8P" secondAttribute="trailing" id="Ga8-d4-PMl"/>
-                            <constraint firstItem="4Uk-bH-Q8P" firstAttribute="bottom" secondItem="n38-gi-rB5" secondAttribute="top" id="m2r-YL-7gL"/>
-                        </constraints>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="528"/>
@@ -52,11 +38,11 @@
                         <viewControllerLayoutGuide type="bottom" id="3zq-oq-fpS"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="rkq-Vv-FBG">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="508"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pWq-rX-ruZ">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="508"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="I9I-p4-h0H">
                                     <size key="itemSize" width="100" height="100"/>
@@ -89,7 +75,7 @@
                                         </connections>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AddMoreCell" id="Iyb-XD-XMs">
-                                        <rect key="frame" x="210" y="10" width="100" height="100"/>
+                                        <rect key="frame" x="138" y="10" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
@@ -97,7 +83,6 @@
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add_more_normal" highlightedImage="add_more_selected" translatesAutoresizingMaskIntoConstraints="NO" id="wOq-hb-O24">
                                                     <rect key="frame" x="30" y="30" width="40" height="40"/>
-                                                    <color key="tintColor" red="0.37254901959999998" green="0.33333333329999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </imageView>
                                             </subviews>
                                         </view>
@@ -111,10 +96,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="pWq-rX-ruZ" firstAttribute="bottom" secondItem="3zq-oq-fpS" secondAttribute="top" id="EiU-MF-CTe"/>
-                            <constraint firstAttribute="trailing" secondItem="pWq-rX-ruZ" secondAttribute="trailing" id="G3D-B5-IwL"/>
-                            <constraint firstItem="pWq-rX-ruZ" firstAttribute="leading" secondItem="rkq-Vv-FBG" secondAttribute="leading" id="RFB-Am-D2f"/>
-                            <constraint firstItem="pWq-rX-ruZ" firstAttribute="top" secondItem="Rn6-TW-X6L" secondAttribute="bottom" id="rW7-xn-s0Y"/>
+                            <constraint firstItem="pWq-rX-ruZ" firstAttribute="leading" secondItem="rkq-Vv-FBG" secondAttribute="leading" id="349-J1-5uT"/>
+                            <constraint firstAttribute="bottom" secondItem="pWq-rX-ruZ" secondAttribute="bottom" id="PAA-kB-2MQ"/>
+                            <constraint firstAttribute="trailing" secondItem="pWq-rX-ruZ" secondAttribute="trailing" id="Y0y-PP-0lh"/>
+                            <constraint firstItem="pWq-rX-ruZ" firstAttribute="top" secondItem="rkq-Vv-FBG" secondAttribute="top" id="tT5-he-ElM"/>
                         </constraints>
                     </view>
                     <connections>
@@ -123,7 +108,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YdD-4C-CXR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="761.60000000000002" y="108.84557721139431"/>
+            <point key="canvasLocation" x="760.79999999999995" y="108.39580209895054"/>
         </scene>
     </scenes>
     <resources>
