--- a/App/Base.lproj/App.storyboard
+++ b/App/Base.lproj/App.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Sticker Collection View Controller-->
+        <!--Photo Stickers-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="StickerCollectionViewController" id="BYZ-38-t0r" customClass="StickerCollectionViewController" customModule="PhotoStickers" customModuleProvider="target" sceneMemberID="viewController">
@@ -61,7 +61,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" id="tGu-nI-cYD">
+                    <navigationItem key="navigationItem" title="Photo Stickers" id="tGu-nI-cYD">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="SxV-cq-Vib">
                             <connections>
                                 <segue destination="mHK-wh-jhb" kind="showDetail" identifier="AddStickerSeque" id="jbz-Sz-vci"/>
@@ -97,7 +97,7 @@
             </objects>
             <point key="canvasLocation" x="854" y="794"/>
         </scene>
-        <!--Edit Sticker View Controller-->
+        <!--Sticker-->
         <scene sceneID="fky-Nl-cnS">
             <objects>
                 <viewController storyboardIdentifier="EditStickerViewController" id="xY5-ie-FY6" customClass="EditStickerViewController" customModule="PhotoStickers" customModuleProvider="target" sceneMemberID="viewController">
@@ -131,7 +131,7 @@
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="4Ef-qB-gCQ"/>
                         <barButtonItem systemItem="camera" id="zho-8l-mAf"/>
                     </toolbarItems>
-                    <navigationItem key="navigationItem" id="3cS-n0-mdI">
+                    <navigationItem key="navigationItem" title="Sticker" id="3cS-n0-mdI">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="HGg-xK-bhk"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="ylz-y4-7pV"/>
                     </navigationItem>
